# cctv-gcc-api

./: .gitignore  AUTHORS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  logging-config.yaml  pyproject.toml  taskfile.yml
cctv_api/: manage.py
cctv_api/cctv_api/: __init__.py  apps.py  filters.py  pagination.py  urls.py
cctv_api/cctv_api/docs/: schema.md  tf2_records.md  yolo_records.md
cctv_api/cctv_api/serializers/: general.py  tf1.py  tf2.py  yolo.py
cctv_api/cctv_api/views/: general.py
cctv_api/cctv_api/views/api/: tf1.py  tf2.py  yolo.py
cctv_api/cctv_core/: asgi.py  settings.py  urls.py  wsgi.py
cctv_api/cctv_records/: admin.py  apps.py  forms.py  helpers.py  models.py  signals.py  urls.py  utils.py  views.py
cctv_api/cctv_records/fixtures/: __init__.py  camera_locations.geojson  init-data.yaml
cctv_api/cctv_records/migrations/: 0001_initial.py  0002_alter_tf1records_bicycles_alter_tf1records_buses_and_more.py  0003_remove_cameras_groups_delete_cameragroups.py  0004_delete_camerarecordsfile.py  0005_alter_recordsfilter_model_delete_tf1records.py
cctv_api/cctv_records/schemas/: __init__.py  remote.py
cctv_api/cctv_records/templates/: upload_report.html
tests/: conftest.py  sample_counts.yaml  test_backend_routes.py  test_default.py  test_general_api.py  test_models.py  test_serializers.py  test_tf2_api.py  test_yolo_api.py
tests/test_mgmt_cmds/: test_add_file.py  test_sync_cameras.py  test_sync_record_filter.py
tests/test_views/: conftest.py  test_general.py  test_tf2.py  test_upload_report.py  test_yolo.py
(+4 files in other folders)
